Update WADL API doc table style and logic.

--- a/index.html
+++ b/index.html
@@ -605,6 +605,7 @@ title: Home
       <td class="summarySeparator"></td>
     </tr>
   </table>
-
   <!-- End: XSLT Processed WADL Info -->
+  <br />
+  <a id="togglePublicAPIDescription" href="#">Toggle Description</a>
 </div>
